[package]
name = "daybreak2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-macroquad = "0.15.0"
gamedebug_core = { git = "https://github.com/crumblingstatue/gamedebug_core.git" }
macroquad = "0.3.25"
